--- a/hvigor/hvigor-config.json5
+++ b/hvigor/hvigor-config.json5
@@ -3,7 +3,7 @@
   "dependencies": {
   },
   "execution": {
-    // "analyze": "normal",                     /* Define the build analyze mode. Value: [ "normal" | "advanced" | "ultrafine" | false ]. Default: "normal" */
+    "analyze": "normal",                     /* Define the build analyze mode. Value: [ "normal" | "advanced" | "ultrafine" | false ]. Default: "normal" */
     // "daemon": true,                          /* Enable daemon compilation. Value: [ true | false ]. Default: true */
     // "incremental": true,                     /* Enable incremental compilation. Value: [ true | false ]. Default: true */
     // "parallel": true,                        /* Enable parallel compilation. Value: [ true | false ]. Default: true */
