process Dialog auto close

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -23,7 +23,7 @@
         "description": "$string:EntryAbility_desc",
         "icon": "$media:layered_image",
         "label": "$string:EntryAbility_label",
-        "startWindowIcon": "$media:layered_image",
+        "startWindowIcon": "$media:foreground",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
         "skills": [
